--- a/my-gdx-game-android/.classpath
+++ b/my-gdx-game-android/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="libs/gdx-backend-android-sources.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-backend-android.jar"/>
 	<classpathentry kind="lib" path="/my-gdx-game/libs/gdx.jar" sourcepath="/my-gdx-game/libs/gdx-sources.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
